--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -3,28 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=>>, initial-scale=1.0" />
+    <link href="stylesheets/reset.css" rel="stylesheet" />
     <link href="stylesheets/main.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
-      <img src="" alt="icono Spotify" />
+    <header class="header main-header">
+      <a class="header-logo" href="#" title="ir a la home">
+        <img src="images/logo.png" alt="icono Spotify" />
+      </a>
       <nav>
-        <ul>
+        <ul class="header-menu">
           <li>
-            <a href="">Premium</a>
+            <a href="#" title="Ir a sección Premium">Premium</a>
           </li>
           <li>
-            <a href="">Ayuda</a>
+            <a href="#" title="Ir a sección Ayuda">Ayuda</a>
           </li>
           <li>
-            <a href="">Descargar</a>
+            <a href="#" title="Ir a Descargar">Descargar</a>
           </li>
           <li>
-            <a href="">Registrarse</a>
+            <a href="#" title="Ir a Registrarse">Registrarse</a>
           </li>
           <li>
-            <a href="">Iniciar Sesión</a>
+            <a href="#" title="Ir a Iniciar Sesión">Iniciar Sesión</a>
           </li>
         </ul>
       </nav>
