--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -2,92 +2,101 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=>>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="stylesheets/reset.css" rel="stylesheet" />
     <link href="stylesheets/main.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Spotify</title>
   </head>
   <body>
-    <header class="header main-header">
-      <a class="header-logo" href="#" title="ir a la home">
-        <img src="images/logo.png" alt="icono Spotify" />
-      </a>
-      <nav>
-        <ul class="header-menu">
-          <li>
-            <a href="#" title="Ir a sección Premium">Premium</a>
-          </li>
-          <li>
-            <a href="#" title="Ir a sección Ayuda">Ayuda</a>
-          </li>
-          <li>
-            <a href="#" title="Ir a Descargar">Descargar</a>
-          </li>
-          <li>
-            <a href="#" title="Ir a Registrarse">Registrarse</a>
-          </li>
-          <li>
-            <a href="#" title="Ir a Iniciar Sesión">Iniciar Sesión</a>
-          </li>
-        </ul>
-      </nav>
+      <header class="header">
+        <div class="wrapper">
+          <a class="header-logo" href="#" title="ir a la home">
+          <img src="images/logo.png" alt="icono Spotify" />
+         </a>
+         <nav>
+            <a href="#" class="header-mobile-button" title="Mostrar menú móvil"></a>
+          <ul class="header-menu">
+            <li>
+              <a href="#" title="Ir a sección Premium">Premium</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a sección Ayuda">Ayuda</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Descargar">Descargar</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Registrarse">Registrarse</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Iniciar Sesión">Iniciar Sesión</a>
+            </li>
+          </ul>
+        </nav>
+       </div>
     </header>
-    <main class="main">
-      <section class="hero">
-        <h1>Prueba Premium gratis 3 meses</h1>
-        <p>
-          Escucha millones de canciones sin anuncios, a la carta y sin conexión.
-        </p>
-        <a href="">Ver planes</a>
-        <p>
-          Rigen términos y condiciones. Los tres meses gratis no están
-          disponibles para usuarios que ya hayan probado Premium.
-        </p>
-      </section>
-      <section class="options">
-        <div>
-          <h2>¿Por qué pasarte a Premium?</h2>
-          <article>
-            <img src="" alt="Descarga música" />
-            <h3>Descarga música.</h3>
-            <p>Llévala siempre contigo.</p>
-          </article>
-          <article>
-            <img src="" alt="Sin anuncios" />
-            <h3>Sin anuncios.</h3>
-            <p>Disfruta de música sin interrupciones.</p>
-          </article>
-          <article>
-            <img src="" alt="Escucha lo que quieras" />
-            <h3>Escucha lo que quieras.</h3>
-            <p>Incluso en el móvil.</p>
-          </article>
-          <article>
-            <img src="" alt="Salta todas las canciones que quieras" />
-            <h4>Salta todas las canciones que quieras.</h4>
-            <p>Simplemente dale a siguiente.</p>
-          </article>
+      <main class="main">
+        <section class="hero">
+          <div class="wrapper">
+          <h1>Prueba Premium gratis 3 meses</h1>
+          <p>
+            Escucha millones de canciones sin anuncios, a la carta y sin
+            conexión.
+          </p>
+          <a href="">Ver planes</a>
+          <p>
+            Rigen términos y condiciones. Los tres meses gratis no están
+            disponibles para usuarios que ya hayan probado Premium.
+          </p>
+        </section>
+        <section class="options">
+          <div>
+            <h2>¿Por qué pasarte a Premium?</h2>
+            <article>
+              <img src="" alt="Descarga música" />
+              <h3>Descarga música.</h3>
+              <p>Llévala siempre contigo.</p>
+            </article>
+            <article>
+              <img src="" alt="Sin anuncios" />
+              <h3>Sin anuncios.</h3>
+              <p>Disfruta de música sin interrupciones.</p>
+            </article>
+            <article>
+              <img src="" alt="Escucha lo que quieras" />
+              <h3>Escucha lo que quieras.</h3>
+              <p>Incluso en el móvil.</p>
+            </article>
+            <article>
+              <img src="" alt="Salta todas las canciones que quieras" />
+              <h4>Salta todas las canciones que quieras.</h4>
+              <p>Simplemente dale a siguiente.</p>
+            </article>
+          </div>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <nav>
-        <ul>
-          <li>
-            <a href="">Legal</a>
-          </li>
-          <li>
-            <a href="">Cookies</a>
-          </li>
-          <li>
-            <a href="">Información sobre los anuncios</a>
-          </li>
-        </ul>
-      </nav>
-      <div>
-        <span>España</span>
-        <span>© 2019 Spotify AB</span>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="wrapper"></div>
+        <nav>
+          <ul>
+            <li>
+              <a href="">Legal</a>
+            </li>
+            <li>
+              <a href="">Cookies</a>
+            </li>
+            <li>
+              <a href="">Información sobre los anuncios</a>
+            </li>
+          </ul>
+        </nav>
+        <div>
+          <span>España</span>
+          <span>© 2019 Spotify AB</span>
+        </div>
       </div>
-    </footer>
+      </footer>
   </body>
 </html>
