--- a/prueba/index.html
+++ b/prueba/index.html
@@ -1,41 +1,102 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Mi página</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="stylesheets/reset.css" rel="stylesheet" />
+    <link href="stylesheets/main.css" rel="stylesheet" />
+    <title>Spotify</title>
   </head>
   <body>
-    <h1>Hola Mundo, día 1 en Adalab</h1>
-    <h2>GAZPACHO</h2>
-    <p>El <strong>gazpacho</strong> es una sopa fría con ingredientes como el aceite de oliva, vinagre y hortalizas crudas: generalmente tomates, pepinos, pimientos, cebollas y ajo.
-        Suele servirse fresco en los meses calurosos de verano. Su color varía desde el anaranjado pálido al rojo, según se empleen tomates más o menos maduros (que aportan un colorante natural denominado licopeno).​ El origen del actual gazpacho es incierto, aunque tradicionalmente se le ha considerado un plato del interior de Andalucía, donde el aceite de oliva y los productos de la huerta son abundantes, y los veranos muy secos y calurosos.​ Por esta razón se le conoce comúnmente como <strong>gazpacho andaluz</strong>. A pesar de ello el origen del gazpacho como plato "desmigado" es anterior al uso de hortalizas en su elaboración y data de la época del al-Ándalus.​</p>
-    <h3>Índice</h3>
-    <ol>
-        <li>El gazpacho andaluz</li>
-        <li>Composición del gazpacho actual
-          <ol>
-        <li>Ingredientes</li>
-          </ol>
-        </li>
-    </ol>
-    <h3>El gazpacho andaluz</h3>
-    <p>El gazpacho denominado andaluz por su popularidad, suele ser definido por algunos autores culinarios como una mezcla entre sopa y ensalada. En la actualidad se lo emplea como un refresco en la mayoría de las ocasiones, el cual es servido por regla general en verano. Suele servirse fresco como una bebida/comida de aromas agradables y reconfortantes. Si bien no está demostrado, hay autores que sospechan su origen en Sevilla. Se denomina andaluz por haber trascendido así al resto de regiones de España y del mundo, pero en Andalucía se toman gazpachos blancos (un ejemplo es el gazpacho blanco cordobés) que no contienen tomate, y gazpachos rojos que sí los tienen. Los gazpachos rojos se elaboran en Andalucía Occidental, los blancos en Málaga, Córdoba y Granada y los verdes en Sierra Morena y Sierra de Huelva.</p>
-    <h4>Composición del gazpacho actual</h4>
-    <p>El gazpacho dispone de unas características organolépticas peculiares de sabor, aroma y color debido a la variedad de verduras que lo componen. El gazpacho andaluz emplea como ingredientes un conjunto de cinco hortalizas, que pueden variar en proporción según los gustos de la localidad, del cocinero o de la familia.</p>
-    <h4>Ingredientes</h4>
-    <ul>
-        <li><strong>Tomates</strong>, deben ser bien maduros para que aporten dulzura, antes eran sólo posibles en otoño, pero en la actualidad con el desarrollo de invernaderos y del transporte desde otras latitudes, es posible tener tomates curados casi durante todo el año. Esta hortaliza es la que brinda el color rojo al gazpacho debido a su contenido en licopeno (colorante natural en la piel y carne del tomate). Su exclusión o inclusión como ingrediente hace que se hable de "gazpachos blancos" o de "gazpachos rojos", respectivamente. En algunos períodos de escasez se ha empleado pimentón en lugar del tomate para lograr el color rojo.</li>
-        <li><strong>Pimientos</strong> (rojos o verdes). El pimiento es una verdura que proporciona frescura y sabores con ligeros toques agrios, en España esta variedad de pimientos no es picante.</li>
-        <li><strong>Ajo</strong> , el ajo en pequeñas cantidades proporciona un aroma característico, dependiendo de los gustos se añade más o menos. Una de las funciones en el gazpacho es la emulgente entre el aceite de oliva y las hortalizas.</li>
-        <li><strong>Pan</strong> se emplea para aumentar volumen o espesar, pero si se emplea se reduce el carácter de bebida refrescante. En su elaboración tradicional suele emplearse restos de pan duro que habitualmente se remojan en agua.</li>
-    </ul>
-    <p>Hay dos ingredientes que aparecen en casi todas las recetas actuales, incluidas las de notables "chefs". Estos son el pepino y la cebolla. Que si bien no se incluyen en la sopa básica, se pueden aportar como acompañamiento en forma de picada.</p>
-    <ul>
-         <li><strong>Pepino</strong>, el pepino se lleva bien con el vinagre Su sabor es fuerte y su proporción es una medida a tener en cuenta por el gazpachero. Cuando su elaboración no incluye pepino se suele tildar de "gazpacho suave". Tanto las propiedades del pepino, como las del vinagre y las del agua fría, aliviaban la sed de los segadores que trabajaban en largas jornadas, bajo condiciones de temperatura extremas y con el único alimento durante el día de su gazpacho.</li>
-        <li><strong>Cebollas</strong>, en las recetas suele ponerse una cierta cantidad. Proporciona saborizantes naturales.
-            Aunque existe la posibilidad de emplear zanahorias, es una costumbre poco habitual.</li>
-    </ul>
-    <p>El aceite de oliva, vinagre, agua y sal son el resto de ingredientes. Suelen emplearse los de mejor calidad, bien conocido es el refrán popular «Con mal vinagre y peor aceite, buen gazpacho no puede hacerse».</p>
+      <header class="header">
+        <div class="wrapper">
+          <a class="header-logo" href="#" title="ir a la home">
+          <img src="images/logo.png" alt="icono Spotify" />
+         </a>
+         <nav>
+            <a href="#" class="header-mobile-button" title="Mostrar menú móvil"></a>
+          <ul class="header-menu">
+            <li>
+              <a href="#" title="Ir a sección Premium">Premium</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a sección Ayuda">Ayuda</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Descargar">Descargar</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Registrarse">Registrarse</a>
+            </li>
+            <li>
+              <a href="#" title="Ir a Iniciar Sesión">Iniciar Sesión</a>
+            </li>
+          </ul>
+        </nav>
+       </div>
+    </header>
+      <main class="main">
+        <section class="hero">
+          <div class="wrapper">
+          <h1>Prueba Premium gratis 3 meses</h1>
+          <p>
+            Escucha millones de canciones sin anuncios, a la carta y sin
+            conexión.
+          </p>
+          <a href="">Ver planes</a>
+          <p>
+            Rigen términos y condiciones. Los tres meses gratis no están
+            disponibles para usuarios que ya hayan probado Premium.
+          </p>
+        </section>
+        <section class="options">
+          <div>
+            <h2>¿Por qué pasarte a Premium?</h2>
+            <article>
+              <img src="" alt="Descarga música" />
+              <h3>Descarga música.</h3>
+              <p>Llévala siempre contigo.</p>
+            </article>
+            <article>
+              <img src="" alt="Sin anuncios" />
+              <h3>Sin anuncios.</h3>
+              <p>Disfruta de música sin interrupciones.</p>
+            </article>
+            <article>
+              <img src="" alt="Escucha lo que quieras" />
+              <h3>Escucha lo que quieras.</h3>
+              <p>Incluso en el móvil.</p>
+            </article>
+            <article>
+              <img src="" alt="Salta todas las canciones que quieras" />
+              <h4>Salta todas las canciones que quieras.</h4>
+              <p>Simplemente dale a siguiente.</p>
+            </article>
+          </div>
+        </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="wrapper"></div>
+        <nav>
+          <ul>
+            <li>
+              <a href="">Legal</a>
+            </li>
+            <li>
+              <a href="">Cookies</a>
+            </li>
+            <li>
+              <a href="">Información sobre los anuncios</a>
+            </li>
+          </ul>
+        </nav>
+        <div>
+          <span>España</span>
+          <span>© 2019 Spotify AB</span>
+        </div>
+      </div>
+      </footer>
   </body>
 </html>
