--- a/modulo-2/modulo2-leccion12-ejercicio1/index.html
+++ b/modulo-2/modulo2-leccion12-ejercicio1/index.html
@@ -7,8 +7,9 @@
     <title>Ejercicio</title>
   </head>
   <body>
-    <button class="js-dog">Perretes!!!</button>
-    <img />
-    <script src="./main.js"></script>
+    <div id="container" class="container">
+      <ul class="items"></ul>
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
