--- a/modulo-2/modulo2-leccion10-ejercicio3/index.html
+++ b/modulo-2/modulo2-leccion10-ejercicio3/index.html
@@ -7,8 +7,19 @@
     <title>Ejercicio</title>
   </head>
   <body>
-    <button class="js-dog">Perretes!!!</button>
+    <h1>Buscador de usuarios en Github</h1>
+    <input type="text" class="username" />
+    <button type="button" class="btn">Buscar</button>
+    <h2>Resultados</h2>
+    <h3>Nombre</h3>
+    <p class="name"></p>
+    <h3>Foto</h3>
+    <div class="img-container">
+      <img src="" alt="" class="avatar" width="200px" />
+    </div>
+    <h3>Número de repositorios</h3>
+    <p class="repositories"></p>
     <img />
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
