--- a/modulo-2/modulo2-leccion11-ejercicio2/index.html
+++ b/modulo-2/modulo2-leccion11-ejercicio2/index.html
@@ -7,8 +7,12 @@
     <title>Ejercicio</title>
   </head>
   <body>
-    <button class="js-dog">Perretes!!!</button>
-    <img />
-    <script src="./main.js"></script>
+    <h1>Buscador de personajes StarWars</h1>
+    <input type="text" class="username" />
+    <button type="button" class="btn">Buscar</button>
+    <p class="js-name"></p>
+    <p class="js-gender"></p>
+
+    <script src="main.js"></script>
   </body>
 </html>
