--- a/modulo-2/modulo2-leccion9-ejercicio3/index.html
+++ b/modulo-2/modulo2-leccion9-ejercicio3/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Mi primer código JavaScript</title>
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <script type="text/javascript" src="./main.js"></script>
